--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "nodemon": "^3.1.11",
     "react": "^19.1.0",
+    "react-avatar": "^5.0.4",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3"
   },
