--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "backend",
+  "name": "pathshala-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "description": "Backend API for Pathshala - Digital Library System",
   "scripts": {
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["library", "digital-library", "books", "reading"],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
